# wol

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cmake-single-platform.yml
include/: wolapplication.h
src/: CMakeLists.txt  main.cpp  wolapplication.cpp
